# good_lp

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/cplex/: response.properties
.github/workflows/: publish.yml  rust.yml  scip.yml
benches/: benchmark.rs
src/: affine_expression_trait.rs  cardinality_constraint_solver_trait.rs  constraint.rs  dual.rs  expression.rs  lib.rs  quadratic_expression.rs  quadratic_expression_trait.rs  quadratic_problem.rs  variable.rs  variables_macro.rs
src/solvers/: clarabel.rs  coin_cbc.rs  cp_sat.rs  cplex.rs  highs.rs  lp_solvers.rs  lpsolve.rs  macros.rs  microlp.rs  minilp.rs  mod.rs  pumpkin_solver.rs  scip.rs
tests/: mipgap_set.rs  quadratic_solver_tests.rs  readme_example.rs  resource_allocation_problem.rs  shadow_price.rs  solver_scaling.rs  static_solver.rs  variables.rs
tests/failures/: adding_incompatible_variables.rs  adding_incompatible_variables.stderr  test_different_types.rs  test_different_types.stderr
