[package]
name = "good_lp"
version = "1.4.0"
authors = ["Ophir LOJKINE <contact@ophir.dev>"]
edition = "2018"
repository = "https://github.com/rust-or/good_lp"
documentation = "https://docs.rs/good_lp"
description = " Mixed Integer Linear Programming for Rust, with an user-friendly API. This crate allows modeling LP problems, and lets you solve them with various solvers."
license = "MIT"
keywords = ["linear-programming", "optimization", "symbolic", "math", "solver"]
categories = ["mathematics", "algorithms", "science", "api-bindings", "data-structures"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["coin_cbc", "singlethread-cbc"]
singlethread-cbc = ["coin_cbc?/singlethread-cbc"]
scip = ["russcip"]

[dependencies]
coin_cbc = { version = "0.1", optional = true, default-features = false }
minilp = { version = "0.2", optional = true }
lpsolve = { version = "0.1", optional = true }
highs = { version = "1.5.0", optional = true }
russcip = { version = "0.2.4", optional = true }
lp-solvers = { version = "0.0.4", features = ["cplex"], optional = true }
fnv = "1"

[dev-dependencies]
criterion = "0.5"
float_eq = "1.0"

[[bench]]
name = "benchmark"
harness = false

[package.metadata.docs.rs]
# Display the documentation for all solvers on docs.rs
all-features = true
default-target = "x86_64-unknown-linux-gnu"
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "docsrs"]
