[package]
name = "good_lp"
version = "1.8.1"
authors = ["Ophir LOJKINE <contact@ophir.dev>"]
edition = "2018"
repository = "https://github.com/rust-or/good_lp"
documentation = "https://docs.rs/good_lp"
description = " Mixed Integer Linear Programming for Rust, with an user-friendly API. This crate allows modeling LP problems, and lets you solve them with various solvers."
license = "MIT"
keywords = ["linear-programming", "optimization", "symbolic", "math", "solver"]
categories = ["mathematics", "algorithms", "science", "api-bindings", "data-structures"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["coin_cbc", "singlethread-cbc"]
singlethread-cbc = ["coin_cbc?/singlethread-cbc"]
scip = ["russcip"]
all_default_solvers = ["coin_cbc", "microlp", "lpsolve", "highs", "russcip", "lp-solvers", "clarabel"] # cplex-rs is not included because it is incompatible with lpsolve
clarabel-wasm = ["clarabel/wasm"]
minilp = ["microlp"] # minilp is not maintained anymore, we use the microlp fork instead

[dependencies]
coin_cbc = { version = "0.1", optional = true, default-features = false }
microlp = { version = "0.2.4", optional = true }
lpsolve = { version = "0.1", optional = true }
highs = { version = "1.5.0", optional = true }
russcip = { version = "0.3.4", optional = true }
lp-solvers = { version = "1.0.0", features = ["cplex"], optional = true }
cplex-rs = { version = "0.1", optional = true }
clarabel = { version = "0.9.0", optional = true, features = [] }
fnv = "1.0.5"

[dev-dependencies]
float_eq = "1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = "0.5"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3.0"

[[bench]]
name = "benchmark"
harness = false

[package.metadata.docs.rs]
# Display the documentation for all solvers on docs.rs
all-features = false
features = [ "all_default_solvers" ]
default-target = "x86_64-unknown-linux-gnu"
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "docsrs"]
